Fix browse on firefox

--- a/src/components/NumericInput.scss
+++ b/src/components/NumericInput.scss
@@ -11,8 +11,13 @@
     }
   }
 
-  input {
+  .input-container {
     flex: 1;
+  }
+
+  input {
+    @include appearance(textfield);
+    height: 100%;
     margin: 0;
     border: 0;
     text-align: center;
